--- a/fluxMusic_front/package.json
+++ b/fluxMusic_front/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "particles-bg": "^2.5.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^3.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
